# bench

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
scripts/: clear_cache.py  survey.py  task.py
skills/: paper.md  task.md
src/: assistant.py  runner.py
src/modules/: __init__.py  assistant.py  base.py  digest.py  intelligence.py  news.py  papers.py
src/utils/: claude.py  codex.py  config.py  data.py  paper_analysis.py
